--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,1 +1,28 @@
+# db setting
+# db setting
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ieh_db?characterEncoding=UTF-8&serverTimezone=UTC&&useSSL=false
+spring.datasource.username=IEH
+spring.datasource.password=QWERasdf1234
+
+# jpa setting
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.generate-ddl=false
+#spring.jpa.show-sql=true
+
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+spring.main.allow-bean-definition-overriding: true
+
+spring.mvc.static-path-pattern=/static/**
+spring.resources.static-locations=classpath:/static/
+spring.resources.add-mappings=true 
+
+spring:
+  devtools:
+    livereload:
+      enabled: true
+  thymeleaf:
+    cache: false
