--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	compile 'org.apache.tomcat.embed:tomcat-embed-jasper'
     compile('javax.servlet:jstl:1.2')
     
