--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 # db setting
-# db setting
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ieh_db?characterEncoding=UTF-8&serverTimezone=UTC&&useSSL=false
 spring.datasource.username=IEH
 spring.datasource.password=QWERasdf1234
 
+hibernate.hbm2ddl.auto=update
+
 # jpa setting
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.generate-ddl=false
-#spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
