--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 	compile 'org.apache.tomcat.embed:tomcat-embed-jasper'
     compile('javax.servlet:jstl:1.2')
     
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.2.4.RELEASE'
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 	compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
     // jsoup
