--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -4,16 +4,25 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ieh_db?characterEncoding=UTF-8
 spring.datasource.username=IEH
 spring.datasource.password=QWERasdf1234
 
-hibernate.hbm2ddl.auto=update
+# hibernate.hbm2ddl.auto=update
 
+# thymeleaf setting
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.prefix=/WEB-INF/views/
+spring.thymeleaf.suffix=.html
 # jpa setting
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# utf-8 setting
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
 
 spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
+spring.mvc.view.suffix=.html
 
 spring.main.allow-bean-definition-overriding: true
 
